--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -4480,6 +4480,7 @@ th.hide-for-touch {
 ***************************************************************/
 .html5-3d-perspective-container {
   position: relative;
+  -ms-perspective: 800px;
   -webkit-perspective: 800px;
   -moz-perspective: 800px;
   -o-perspective: 800px;
@@ -4489,6 +4490,7 @@ th.hide-for-touch {
   position: absolute;
   width: 100%;
   height: 100%;
+  -ms-transition: -ms-transform 1s;
   -webkit-transition: -webkit-transform 1s;
   -moz-transition: -moz-transform 1s;
   -o-transition: -o-transform 1s;
@@ -4496,17 +4498,20 @@ th.hide-for-touch {
   .html5-3d-context.flipped-x {
     -webkit-transform: rotateX(180deg);
     -moz-transform: rotateX(180deg);
+    -ms-transition: rotateX(180deg);
     -o-transform: rotateX(180deg);
     transform: rotateX(180deg); }
   .html5-3d-context.flipped-y {
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
+    -ms-transition: rotateY(180deg);
     -o-transform: rotateY(180deg);
     transform: rotateY(180deg); }
 
 .preserve-3d {
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
+  -ms-transition: preserve-3d;
   -o-transform-style: preserve-3d;
   transform-style: preserve-3d; }
 
@@ -4517,18 +4522,21 @@ th.hide-for-touch {
   height: 100%;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
 
 .back-face-x {
   -webkit-transform: rotateX(180deg);
   -moz-transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
   -o-transform: rotateX(180deg);
   transform: rotateX(180deg); }
 
 .back-face-y {
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
   transform: rotateY(180deg); }
 
@@ -4580,6 +4588,102 @@ th.hide-for-touch {
 
 .icon-unchecked:before {
   content: "g"; }
+
+.icon-shopping:before {
+  content: "h"; }
+
+.icon-facebook:before {
+  content: "j"; }
+
+.icon-gplus:before {
+  content: "k"; }
+
+.icon-twitter:before {
+  content: "l"; }
+
+.icon-settings:before {
+  content: "m"; }
+
+.icon-favorites:before {
+  content: "n"; }
+
+.icon-share:before {
+  content: "i"; }
+
+.icon-circle-arrow-r:before {
+  content: "o"; }
+
+.icon-circle-arrow-l:before {
+  content: "p"; }
+
+.icon-tab-arrow-l:before {
+  content: "q"; }
+
+.icon-generic-pizza:before {
+  content: "r"; }
+
+.icon-salads:before {
+  content: "s"; }
+
+.icon-assorted-fingers:before {
+  content: "t"; }
+
+.icon-super-pizzas:before {
+  content: "u"; }
+
+.icon-specialty-pizzas:before {
+  content: "v"; }
+
+.icon-poutines:before {
+  content: "w"; }
+
+.icon-pita-wraps:before {
+  content: "x"; }
+
+.icon-original-pizzas:before {
+  content: "y"; }
+
+.icon-panzarottis:before {
+  content: "z"; }
+
+.icon-sandwiches:before {
+  content: "A"; }
+
+.icon-subs:before {
+  content: "B"; }
+
+.icon-burgers:before {
+  content: "C"; }
+
+.icon-donairs:before {
+  content: "D"; }
+
+.icon-fish-and-chips:before {
+  content: "E"; }
+
+.icon-chicken-and-chips:before {
+  content: "F"; }
+
+.icon-xtreme-subs:before {
+  content: "G"; }
+
+.icon-desserts:before {
+  content: "H"; }
+
+.icon-beverages:before {
+  content: "I"; }
+
+.icon-pasta:before {
+  content: "J"; }
+
+.icon-orb-card-cart:before {
+  content: "K"; }
+
+.icon-orb-card-favorite:before {
+  content: "L"; }
+
+.icon-orb-card-share:before {
+  content: "M"; }
 
 @font-face {
   font-family: "Helvetica Neue Medium Condensed";
@@ -4665,13 +4769,14 @@ input {
   color: white; }
 
 li.orbcat {
-  line-height: 7.34766rem;
   text-align: center; }
+  li.orbcat span {
+    font-size: 2.625rem; }
   li.orbcat a {
     font-family: "Helvetica Neue Medium Condensed", arial, sans-serif;
     color: white;
     font-size: 0.875rem; }
-  li.orbcat:hover a, li.orbcat.active a {
+  li.orbcat:hover a, li.orbcat:hover span, li.orbcat.active a, li.orbcat.active span {
     color: #faea06; }
 
 /*          ORB CARD            */
@@ -4685,8 +4790,17 @@ li.orbcat {
   right: 0.3125rem;
   color: #a2a2a2; }
 
-div.orb-card-button {
-  text-align: center; }
+div.orb-card-button span {
+  line-height: 1;
+  font-size: 4.96094rem; }
+  div.orb-card-button span.icon-orb-card-favorite {
+    color: #faea06; }
+  div.orb-card-button span.icon-orb-card-cart {
+    color: #e02027; }
+  div.orb-card-button span.icon-orb-card-share {
+    color: #0779be; }
+  div.orb-card-button span:hover {
+    color: #b4b4b4 !important; }
 
 #active-orbcat-menu-header h2 {
   line-height: 4.17563rem; }
@@ -4731,6 +4845,15 @@ ul#orb-opts-filter * {
   vertical-align: middle;
   color: white !important;
   text-align: left; }
+
+li#orb-opt-filters-all span.icon-tab-arrow-l {
+  font-size: 0.8rem;
+  line-height: 2.4265rem; }
+li#orb-opt-filters-all a {
+  font-size: 0.8rem;
+  color: #373737; }
+  li#orb-opt-filters-all a:hover {
+    color: #848484; }
 
 #orb-total {
   color: #191919;
@@ -4808,6 +4931,9 @@ button.unavailable {
     right: default;
     top: default;
     bottom: default; }
+
+.noverflow {
+  overflow: hidden; }
 
 #xtreme-modal {
   position: fixed;
@@ -4899,6 +5025,39 @@ footer {
     color: white; }
   .xtreme-select-list.active a, .xtreme-select-list.active h1, .xtreme-select-list.active h2, .xtreme-select-list.active h3, .xtreme-select-list.active h4, .xtreme-select-list.active h5, .xtreme-select-list.active span {
     color: #191919; }
+
+.up-slid {
+  -webkit-transform: translate(0, -1000px);
+  -moz-transform: translate(0, -1000px);
+  -o-transform: translate(0, -1000px);
+  transform: translate(0, -1000px); }
+
+#primary-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  border: 0.375rem solid white;
+  background-color: #d2d2d2;
+  background: whitesmoke;
+  /* Old browsers */
+  background: -moz-linear-gradient(45deg, #f5f5f5 0%, #969696 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #f5f5f5), color-stop(100%, #969696));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(45deg, #f5f5f5 0%, #969696 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(45deg, #f5f5f5 0%, #969696 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(45deg, #f5f5f5 0%, #969696 100%);
+  /* IE10+ */
+  background: linear-gradient(45deg, #f5f5f5 0%, #969696 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#969696', GradientType=1);
+  /* IE6-9 fallback on horizontal gradient */
+  min-width: 600px;
+  max-width: 75rem;
+  min-height: 600px;
+  max-height: 600px; }
 
 #monthly-content-wrapper {
   position: relative;
@@ -5289,83 +5448,88 @@ li.orbcat {
   background-repeat: no-repeat;
   background-position: center 0.3125rem;
   background-size: 2.67188rem; }
-  li.orbcat.original-pizzas {
+  li.orbcat.bg-icons.original-pizzas {
     background-image: url("../img/orbcat_icons/original-pizzas.png"); }
-  li.orbcat.super-pizzas {
+  li.orbcat.bg-icons.super-pizzas {
     background-image: url("../img/orbcat_icons/super-pizzas.png"); }
-  li.orbcat.specialty-pizzas {
+  li.orbcat.bg-icons.specialty-pizzas {
     background-image: url("../img/orbcat_icons/specialty-pizzas.png"); }
-  li.orbcat.panzarottis {
+  li.orbcat.bg-icons.panzarottis {
     background-image: url("../img/orbcat_icons/panzarottis.png"); }
-  li.orbcat.assorted-fingers {
+  li.orbcat.bg-icons.assorted-fingers {
     background-image: url("../img/orbcat_icons/assorted-fingers.png"); }
-  li.orbcat.poutines {
+  li.orbcat.bg-icons.poutines {
     background-image: url("../img/orbcat_icons/poutines.png"); }
-  li.orbcat.donairs {
+  li.orbcat.bg-icons.donairs {
     background-image: url("../img/orbcat_icons/donairs.png"); }
-  li.orbcat.chicken-and-chips {
+  li.orbcat.bg-icons.chicken-and-chips {
     background-image: url("../img/orbcat_icons/chicken-and-chips.png"); }
-  li.orbcat.fish-and-chips {
+  li.orbcat.bg-icons.fish-and-chips {
     background-image: url("../img/orbcat_icons/fish-and-chips.png"); }
-  li.orbcat.pasta {
+  li.orbcat.bg-icons.pasta {
     background-image: url("../img/orbcat_icons/pasta.png"); }
-  li.orbcat.burgers {
+  li.orbcat.bg-icons.burgers {
     background-image: url("../img/orbcat_icons/burgers.png"); }
-  li.orbcat.sandwiches {
+  li.orbcat.bg-icons.sandwiches {
     background-image: url("../img/orbcat_icons/sandwiches.png"); }
-  li.orbcat.pita-wraps {
+  li.orbcat.bg-icons.pita-wraps {
     background-image: url("../img/orbcat_icons/pita-wraps.png"); }
-  li.orbcat.subs {
+  li.orbcat.bg-icons.subs {
     background-image: url("../img/orbcat_icons/subs.png"); }
-  li.orbcat.xtreme-subs {
+  li.orbcat.bg-icons.xtreme-subs {
     background-image: url("../img/orbcat_icons/xtreme-subs.png"); }
-  li.orbcat.beverages {
+  li.orbcat.bg-icons.beverages {
     background-image: url("../img/orbcat_icons/beverages.png"); }
-  li.orbcat.salads {
+  li.orbcat.bg-icons.salads {
     background-image: url("../img/orbcat_icons/salads.png"); }
-  li.orbcat.desserts {
+  li.orbcat.bg-icons.desserts {
     background-image: url("../img/orbcat_icons/desserts.png"); }
-  li.orbcat a {
+  li.orbcat.bg-icons a {
     height: 1.78125rem;
     margin-top: 5.34375rem; }
-  li.orbcat:hover.original-pizzas, li.orbcat.active.original-pizzas {
+  li.orbcat.bg-icons:hover.original-pizzas, li.orbcat.bg-icons.active.original-pizzas {
     background-image: url("../img/orbcat_icons/original-pizzas.hover.png"); }
-  li.orbcat:hover.super-pizzas, li.orbcat.active.super-pizzas {
+  li.orbcat.bg-icons:hover.super-pizzas, li.orbcat.bg-icons.active.super-pizzas {
     background-image: url("../img/orbcat_icons/super-pizzas.hover.png"); }
-  li.orbcat:hover.specialty-pizzas, li.orbcat.active.specialty-pizzas {
+  li.orbcat.bg-icons:hover.specialty-pizzas, li.orbcat.bg-icons.active.specialty-pizzas {
     background-image: url("../img/orbcat_icons/specialty-pizzas.hover.png"); }
-  li.orbcat:hover.panzarottis, li.orbcat.active.panzarottis {
+  li.orbcat.bg-icons:hover.panzarottis, li.orbcat.bg-icons.active.panzarottis {
     background-image: url("../img/orbcat_icons/panzarottis.hover.png"); }
-  li.orbcat:hover.assorted-fingers, li.orbcat.active.assorted-fingers {
+  li.orbcat.bg-icons:hover.assorted-fingers, li.orbcat.bg-icons.active.assorted-fingers {
     background-image: url("../img/orbcat_icons/assorted-fingers.hover.png"); }
-  li.orbcat:hover.poutines, li.orbcat.active.poutines {
+  li.orbcat.bg-icons:hover.poutines, li.orbcat.bg-icons.active.poutines {
     background-image: url("../img/orbcat_icons/poutines.hover.png"); }
-  li.orbcat:hover.donairs, li.orbcat.active.donairs {
+  li.orbcat.bg-icons:hover.donairs, li.orbcat.bg-icons.active.donairs {
     background-image: url("../img/orbcat_icons/donairs.hover.png"); }
-  li.orbcat:hover.chicken-and-chips, li.orbcat.active.chicken-and-chips {
+  li.orbcat.bg-icons:hover.chicken-and-chips, li.orbcat.bg-icons.active.chicken-and-chips {
     background-image: url("../img/orbcat_icons/chicken-and-chips.hover.png"); }
-  li.orbcat:hover.fish-and-chips, li.orbcat.active.fish-and-chips {
+  li.orbcat.bg-icons:hover.fish-and-chips, li.orbcat.bg-icons.active.fish-and-chips {
     background-image: url("../img/orbcat_icons/fish-and-chips.hover.png"); }
-  li.orbcat:hover.pasta, li.orbcat.active.pasta {
+  li.orbcat.bg-icons:hover.pasta, li.orbcat.bg-icons.active.pasta {
     background-image: url("../img/orbcat_icons/pasta.hover.png"); }
-  li.orbcat:hover.burgers, li.orbcat.active.burgers {
+  li.orbcat.bg-icons:hover.burgers, li.orbcat.bg-icons.active.burgers {
     background-image: url("../img/orbcat_icons/burgers.hover.png"); }
-  li.orbcat:hover.sandwiches, li.orbcat.active.sandwiches {
+  li.orbcat.bg-icons:hover.sandwiches, li.orbcat.bg-icons.active.sandwiches {
     background-image: url("../img/orbcat_icons/sandwiches.hover.png"); }
-  li.orbcat:hover.pita-wraps, li.orbcat.active.pita-wraps {
+  li.orbcat.bg-icons:hover.pita-wraps, li.orbcat.bg-icons.active.pita-wraps {
     background-image: url("../img/orbcat_icons/pita-wraps.hover.png"); }
-  li.orbcat:hover.subs, li.orbcat.active.subs {
+  li.orbcat.bg-icons:hover.subs, li.orbcat.bg-icons.active.subs {
     background-image: url("../img/orbcat_icons/subs.hover.png"); }
-  li.orbcat:hover.xtreme-subs, li.orbcat.active.xtreme-subs {
+  li.orbcat.bg-icons:hover.xtreme-subs, li.orbcat.bg-icons.active.xtreme-subs {
     background-image: url("../img/orbcat_icons/xtreme-subs.hover.png"); }
-  li.orbcat:hover.beverages, li.orbcat.active.beverages {
+  li.orbcat.bg-icons:hover.beverages, li.orbcat.bg-icons.active.beverages {
     background-image: url("../img/orbcat_icons/beverages.hover.png"); }
-  li.orbcat:hover.salads, li.orbcat.active.salads {
+  li.orbcat.bg-icons:hover.salads, li.orbcat.bg-icons.active.salads {
     background-image: url("../img/orbcat_icons/salads.hover.png"); }
-  li.orbcat:hover.desserts, li.orbcat.active.desserts {
+  li.orbcat.bg-icons:hover.desserts, li.orbcat.bg-icons.active.desserts {
     background-image: url("../img/orbcat_icons/desserts.hover.png"); }
+  li.orbcat span.orbcat-icon {
+    display: block;
+    height: 2.625rem;
+    margin-bottom: 0.625rem; }
 
 #orbcat-menu-title {
+  width: 50rem;
   left: 0.9375rem;
   -webkit-transform: translateY(0.7125rem);
   -moz-transform: translateY(0.7125rem);
@@ -5422,6 +5586,7 @@ li.orbcat {
   transform-origin: 100% 0;
   -webkit-transform: rotate(270deg) translate(0, -14.10938rem);
   -moz-transform: rotate(270deg) translate(0, -14.10938rem);
+  -ms-transform: rotate(270deg) translate(0, -14.10938rem);
   -o-transform: rotate(270deg) translate(0, -14.10938rem);
   transform: rotate(270deg) translate(0, -14.10938rem);
   text-shadow: 0 0 0.375rem rgba(0, 0, 0, 0.33);
@@ -5454,6 +5619,7 @@ div#orb-card {
       top: 1.64583rem;
       -webkit-transform: rotate(-90deg);
       -moz-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
       -o-transform: rotate(-90deg);
       transform: rotate(-90deg); }
   div#orb-card .orb-card-row {
@@ -5466,29 +5632,34 @@ div#orb-card {
     height: 3.96875rem;
     background-repeat: no-repeat;
     background-position: center;
-    cursor: pointer;
-    transition: background-color 0.3s; }
-    div#orb-card ul.orb-card div.orb-card-button#favorite {
-      background-color: #faea06;
-      background-image: url('../img/orb_card.icon.fav.png'); }
-      div#orb-card ul.orb-card div.orb-card-button#favorite .triangle {
-        border-top: 0.75rem solid #faea06; }
-    div#orb-card ul.orb-card div.orb-card-button#order {
-      background-color: #e02027;
-      background-image: url('../img/orb_card.icon.cart.png'); }
-      div#orb-card ul.orb-card div.orb-card-button#order .triangle {
-        border-top: 0.75rem solid #e02027; }
-    div#orb-card ul.orb-card div.orb-card-button#like {
-      background-color: #0779be;
-      background-image: url('../img/orb_card.icon.like.png'); }
-      div#orb-card ul.orb-card div.orb-card-button#like .triangle {
-        border-top: 0.75rem solid #0779be; }
-    div#orb-card ul.orb-card div.orb-card-button .triangle {
-      transition: border-top-color 0.3s; }
-    div#orb-card ul.orb-card div.orb-card-button#favorite:hover, div#orb-card ul.orb-card div.orb-card-button#order:hover, div#orb-card ul.orb-card div.orb-card-button#like:hover {
-      background-color: #b4b4b4; }
-      div#orb-card ul.orb-card div.orb-card-button#favorite:hover .triangle, div#orb-card ul.orb-card div.orb-card-button#order:hover .triangle, div#orb-card ul.orb-card div.orb-card-button#like:hover .triangle {
-        border-top-color: #b4b4b4; }
+    cursor: pointer; }
+    div#orb-card ul.orb-card div.orb-card-button span {
+      display: block;
+      width: 3.96875rem;
+      height: 3.96875rem; }
+    div#orb-card ul.orb-card div.orb-card-button.bg-icons {
+      transition: background-color 0.3s; }
+      div#orb-card ul.orb-card div.orb-card-button.bg-icons#favorite {
+        background-color: #faea06;
+        background-image: url('../img/orb_card.icon.fav.png'); }
+        div#orb-card ul.orb-card div.orb-card-button.bg-icons#favorite .triangle {
+          border-top: 0.75rem solid #faea06; }
+      div#orb-card ul.orb-card div.orb-card-button.bg-icons#order {
+        background-color: #e02027;
+        background-image: url('../img/orb_card.icon.cart.png'); }
+        div#orb-card ul.orb-card div.orb-card-button.bg-icons#order .triangle {
+          border-top: 0.75rem solid #e02027; }
+      div#orb-card ul.orb-card div.orb-card-button.bg-icons#like {
+        background-color: #0779be;
+        background-image: url('../img/orb_card.icon.like.png'); }
+        div#orb-card ul.orb-card div.orb-card-button.bg-icons#like .triangle {
+          border-top: 0.75rem solid #0779be; }
+      div#orb-card ul.orb-card div.orb-card-button.bg-icons .triangle {
+        transition: border-top-color 0.3s; }
+      div#orb-card ul.orb-card div.orb-card-button.bg-icons#favorite:hover, div#orb-card ul.orb-card div.orb-card-button.bg-icons#order:hover, div#orb-card ul.orb-card div.orb-card-button.bg-icons#like:hover {
+        background-color: #b4b4b4; }
+        div#orb-card ul.orb-card div.orb-card-button.bg-icons#favorite:hover .triangle, div#orb-card ul.orb-card div.orb-card-button.bg-icons#order:hover .triangle, div#orb-card ul.orb-card div.orb-card-button.bg-icons#like:hover .triangle {
+          border-top-color: #b4b4b4; }
 
 div.orb-card-content {
   width: 30.09375rem;
@@ -5594,8 +5765,6 @@ input#orderOrbQuantity {
   overflow: hidden;
   height: 3.4125rem;
   width: 34.17969rem; }
-  .orb-card-stage-menu-header * {
-    overflow: hidden; }
   .orb-card-stage-menu-header h2, .orb-card-stage-menu-header ul {
     padding-left: 11.39312rem;
     background-color: #e02027;
@@ -5656,14 +5825,50 @@ input#orderOrbQuantity {
   height: 3.4125rem;
   padding: 0.3125rem;
   padding-left: 10.74219rem;
-  overflow: hidden; }
+  overflow: hidden;
+  z-index: 8010; }
   #orb-opt-filters li {
+    cursor: pointer;
+    float: left;
     overflow: hidden;
     background-color: transparent;
     width: 7.29167rem;
     height: 1.39375rem; }
+    #orb-opt-filters li:hover {
+      color: #f6bdc0; }
 
 .orb-opt-configure-header {
   background-color: #e02027;
   padding: 0.73438rem 0 0.3125rem 0.9375rem;
   line-height: 1.6875rem; }
+
+li#orb-opt-filters-all {
+  height: 2.7875rem;
+  margin: 0.3125rem 0;
+  width: 5.3rem;
+  transform: translate(4.55rem, 0);
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  padding: 0.3125rem;
+  padding-left: 0.125rem;
+  background-color: white;
+  box-shadow: -3px 0 3px rgba(0, 0, 0, 0.25);
+  color: #e02027; }
+  li#orb-opt-filters-all:hover {
+    transform: translate(0, 0); }
+    li#orb-opt-filters-all:hover span {
+      color: #e02027; }
+  li#orb-opt-filters-all ul, li#orb-opt-filters-all span {
+    vertical-align: top;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    height: 2.7875rem; }
+  li#orb-opt-filters-all ul {
+    width: 4rem;
+    background-color: transparent;
+    padding-left: 0.3125rem; }
+    li#orb-opt-filters-all ul li {
+      width: 4rem;
+      display: block;
+      height: 1.08125rem; }
