--- a/webroot/scss/3d.scss
+++ b/webroot/scss/3d.scss
@@ -5,6 +5,7 @@
 ***************************************************************/
 .html5-3d-perspective-container {
   position            : relative;
+  -ms-perspective     : 800px;
   -webkit-perspective : 800px;
   -moz-perspective    : 800px;
   -o-perspective      : 800px;
@@ -15,6 +16,7 @@
   position           : absolute;
   width              : 100%;
   height             : 100%;
+  -ms-transition     : -ms-transform 1s;
   -webkit-transition : -webkit-transform 1s;
   -moz-transition    : -moz-transform 1s;
   -o-transition      : -o-transform 1s;
@@ -23,12 +25,14 @@
   &.flipped-x {
     -webkit-transform : rotateX(180deg);
     -moz-transform    : rotateX(180deg);
+    -ms-transition    : rotateX(180deg);
     -o-transform      : rotateX(180deg);
     transform         : rotateX(180deg);
   }
   &.flipped-y {
     -webkit-transform : rotateY(180deg);
     -moz-transform    : rotateY(180deg);
+    -ms-transition    : rotateY(180deg);
     -o-transform      : rotateY(180deg);
     transform         : rotateY(180deg);
   }
@@ -37,6 +41,7 @@
 .preserve-3d {
   -webkit-transform-style : preserve-3d;
   -moz-transform-style    : preserve-3d;
+  -ms-transition          : preserve-3d;
   -o-transform-style      : preserve-3d;
   transform-style         : preserve-3d;
 }
@@ -48,6 +53,7 @@
   height                      : 100%;
   -webkit-backface-visibility : hidden;
   -moz-backface-visibility    : hidden;
+  -ms-backface-visibility     : hidden;
   -o-backface-visibility      : hidden;
   backface-visibility         : hidden;
 }
@@ -55,6 +61,7 @@
 .back-face-x {
   -webkit-transform : rotateX(180deg);
   -moz-transform    : rotateX(180deg);
+  -ms-transform     : rotateX(180deg);
   -o-transform      : rotateX(180deg);
   transform         : rotateX(180deg);
 }
@@ -62,6 +69,7 @@
 .back-face-y {
   -webkit-transform : rotateY(180deg);
   -moz-transform    : rotateY(180deg);
+  -ms-transform     : rotateY(180deg);
   -o-transform      : rotateY(180deg);
   transform         : rotateY(180deg);
 }
