Modals significantly updated; user activity menu implemented; js-routing class created

--- a/webroot/scss/_settings.scss
+++ b/webroot/scss/_settings.scss
@@ -168,7 +168,7 @@ $header-text-rendering: optimizeLegibility;
 // $paragraph-font-weight: $font-weight-normal;
 // $paragraph-font-size: 1rem;
 // $paragraph-line-height: 1.6;
-// $paragraph-margin-bottom: rem-calc(20);
+$paragraph-margin-bottom: 0;
 // $paragraph-aside-font-size: rem-calc(14);
 // $paragraph-aside-line-height: 1.35;
 // $paragraph-aside-font-style: italic;
@@ -532,7 +532,7 @@ $include-html-button-classes: false;
 // $include-html-form-classes: $include-html-classes;
 
 // We use this to set the base for lots of form spacing and positioning styles
-// $form-spacing: rem-calc(16);
+$form-spacing: rem-calc(8);
 
 // We use these to style the labels in different ways
 // $form-label-pointer: pointer;
