--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -29,6 +29,8 @@ $black: rgb(0,0,0);
 $white: rgb(255,255,255);
 $dark-grey: rgb(25,25,25);
 $transparent: rgba(0,0,0,0);
+$error-color: lighten($xtreme-red, 20%);
+
 // GRADIENTS
 @mixin orb-card-gradient() {
   background-color           : $orb-card-stage-grey;
@@ -75,3 +77,13 @@ $transparent: rgba(0,0,0,0);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f17c', endColorstr='#faea06',GradientType=0 ); /* IE6-9 */
 }
 
+@mixin primary-modal-bg {
+  background: rgb(255,255,255); /* Old browsers */
+  background: -moz-linear-gradient(45deg,  rgba(255,255,255,1) 0%, rgba(243,243,243,1) 50%, rgba(237,237,237,1) 51%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(243,243,243,1)), color-stop(51%,rgba(237,237,237,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%); /* IE10+ */
+  background: linear-gradient(45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
